--- a/templates/UI.html
+++ b/templates/UI.html
@@ -334,16 +334,16 @@
 
 <footer>
     <div class="footer-row">
-        <span>Tran Anh Tuan 1</span>
+        <span>Tran Anh Tuan</span>
         <i class="fa-solid fa-handshake"></i>
-        <span>Tran Anh Tuan 1</span>
+        <span>Viet Huy Duong</span>
         <i class="fa-solid fa-handshake"></i>
-        <span>Tran Anh Tuan 1</span>
+        <span>Jinhui Ma</span>
     </div>
     <div class="footer-row">
-        <span>Tran Anh Tuan 1</span>
+        <span>Andrei Roman</span>
         <i class="fa-solid fa-handshake"></i>
-        <span>Tran Anh Tuan 1</span>
+        <span>Jared Young</span>
     </div>
 </footer>
 
