--- a/templates/UI.html
+++ b/templates/UI.html
@@ -319,7 +319,7 @@
         <select class="model-select">
             <option>Select Classifier</option>
             <option>(PWRC) Purity-Weighted Rule Classifier</option>
-            <option>Classifier2</option>
+            <option>Classifier2(will available Soon)!</option>
         </select>
 
         <button class="predict-btn">Predict</button>
